--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Sunbelt</string>
     <string name="title_list">Listado de noticias</string>
+    <string name="source_author">%s - %s</string>
 </resources>
